updated the header section - not styled for tablet and mobile yet

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     ></script>
   </head>
   <body>
-    <header class="header">
+    <header class="main-header">
       <div id="logo-header">
         <img
           id="logo-header-img"
@@ -45,6 +45,83 @@
       </div>
       
     </header>
-    <hr id="header-line">
+      <hr id="header-line">
+    <header class="secondary-header">
+      <div class="dropdown-container">
+        <a class="dropdown-title" href="index.html">
+          Windows
+          <i class="fa fa-caret-down"></i>
+        </a>
+        <div class="dropdown-list">
+          <a href="">VEKA Windows</a>
+          <a href="">Flush Sash Windows</a>
+          <a href="">Residence Collection</a>
+        </div>
+      </div>
+      <div class="dropdown-container">
+        <a class="dropdown-title" href="index.html">
+          Doors
+          <i class="fa fa-caret-down"></i>
+        </a>
+        <div class="dropdown-list">
+          <a href="">item 1</a>
+          <a href="">item 1</a>
+          <a href="">item 1</a>
+        </div>
+      </div>
+      <div class="dropdown-container">
+        <a class="dropdown-title" href="index.html">
+          Lanterns
+          <i class="fa fa-caret-down"></i>
+        </a>
+        <div class="dropdown-list">
+          <a href="">item 1</a>
+          <a href="">item 1</a>
+          <a href="">item 1</a>
+        </div>
+      </div>
+      <div class="dropdown-container">
+        <a class="dropdown-title" href="index.html">
+          Maintenance
+          <i class="fa fa-caret-down"></i>
+        </a>
+        <div class="dropdown-list">
+          <a href="">item 1</a>
+          <a href="">item 1</a>
+          <a href="">item 1</a>
+        </div>
+      </div>
+      <div class="quote-container">
+        <a class="quote-button" href="">
+          <i class="fa fa-caret-right"></i>
+          Get a Quote
+        </a>
+      </div>
+    </header>
+    <header class="third-header">
+      <div id="fact-bar">
+        <h3 id="first-header" class="fact-bar-headers">
+          QUALITY INSTALLERS
+        </h3>
+        <h3>
+          |
+        </h3>
+        <h3 class="fact-bar-headers">
+          RELIABLE
+        </h3>
+        <h3>
+          |
+        </h3>
+        <h3 class="fact-bar-headers">
+          ADVICE & SUPPORT
+        </h3>
+        <h3>
+          |
+        </h3>
+        <h3 class="fact-bar-headers">
+          TRUSTED TRADERS
+        </h3>
+      </div>
+    </header>
   </body>
 </html>
