updated the header so it is responsive to ipads - removed header sections from mobile ready for hamburger menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     ></script>
   </head>
   <body>
-    <header class="main-header">
+    <header>
+      <div class="main-header">
       <div id="logo-header">
         <img
           id="logo-header-img"
@@ -43,10 +44,9 @@
             <i class="fa-regular fa-envelope"></i> info@bradleyscottwindows.co.uk
         </a>
       </div>
-      
-    </header>
-      <hr id="header-line">
-    <header class="secondary-header">
+    </div>
+    <hr id="header-line">
+    <div class="secondary-header">
       <div class="dropdown-container">
         <a class="dropdown-title" href="index.html">
           Windows
@@ -97,8 +97,8 @@
           Get a Quote
         </a>
       </div>
-    </header>
-    <header class="third-header">
+    </div>
+    <div class="third-header">
       <div id="fact-bar">
         <h3 id="first-header" class="fact-bar-headers">
           QUALITY INSTALLERS
@@ -122,6 +122,7 @@
           TRUSTED TRADERS
         </h3>
       </div>
+    </div>
     </header>
   </body>
 </html>
