--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="header-styles.css" type="text/css" />
-    <link rel="stylesheet" href="hero-styles.css" type="text/css">
+    <link rel="stylesheet" href="styles/main-styles.css" type="text/css">
+    <link rel="stylesheet" href="styles/header-styles.css" type="text/css" />
+    <link rel="stylesheet" href="styles/hero-styles.css" type="text/css">
     <script src="header.js"></script>
     <script
       src="https://kit.fontawesome.com/755d98b8ba.js"
@@ -129,7 +130,7 @@
     </header>
 
     <div class="hero-image">
-        <img class="hero-images" src="assets/images/hero-4.jpg">
+      <video id="hero-video" src="assets/videos/hero-video.mp4" class="hero-images" autoplay loop muted></video>
         <div class="hero-overlay">
           <h3 id="hero-text-welcome">
             <i id="welcome-square" class="fa-solid fa-square"></i>
