added a to do and also fixed an issue from styling the hero

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     ></script>
     <script src="hero.js"></script>
   </head>
+
+    TODO - STYLE FOR IPADS LANDSCAPE
   <body>
+    
     <header id="mainHeader">
       <div class="main-header">
       <div id="logo-header">
@@ -128,6 +131,7 @@
       </div>
     </div>
     </header>
+
 
     <div class="hero-image">
       <video id="hero-video" src="assets/videos/hero-video.mp4" class="hero-images" autoplay loop muted></video>
