--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/main-styles.css" type="text/css">
     <link rel="stylesheet" href="styles/header-styles.css" type="text/css" />
     <link rel="stylesheet" href="styles/hero-styles.css" type="text/css">
+    <link rel="stylesheet" href="styles/home-page-styles.css" type="text/css">
     <script src="header.js"></script>
     <script
       src="https://kit.fontawesome.com/755d98b8ba.js"
@@ -43,7 +44,7 @@
         <a href="tel:01827288688" id="phone-number-header">01827 288688</a>
       </div>
       <div id="contact-header" >
-        <a id="header-button" href="contact.html">
+        <a class="header-button" href="contact.html">
             <i id="header-button-arrow" class="fa-solid fa-phone"></i></i>
             <h3 id="header-button-text">Contact Us</h3>
         </a>
@@ -142,11 +143,42 @@
         </div>
         <div class="hero-overlay">
           <h1 id="hero-text-about">99% Customer Satisfaction Rate</h1>
+          <a id="hero-button" href="about.html">
+            About
+            <i class="fa-solid fa-arrow-right"></i>
+          </a>
         </div>
         <div class="hero-overlay">
           <img id="years-badge" src="assets/images/years-badge.png" alt="">
         </div>
+        </div>
+
+  <div class="container">
+    <div class="large-div">
+        <div class="hero-overlay">
+          <h3 id="flush-sash-text" class="overlay-text">Flush Sash Collection</h3>
+        </div>
+      <img id="big-image" src="assets/images/external-one.png" alt="">
     </div>
+    <div class="side-divs">
+      <div class="top-divs">
+        <div class="small-div">
+          <img id="small-img-one" src="assets/images/veka-one.jpg" alt="">
+        </div>
+        <div class="small-div">
+          <img id="small-img-two" src="assets/images/hero-4.jpg" alt="">
+        </div>
+      </div>
+      <div class="top-divs">
+        <div class="small-div">
+          <img id="small-img-three" src="assets/images/veka-two.jpg" alt="">
+        </div>
+        <div class="small-div">
+          <img id="small-img-four" src="assets/images/veka-three.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
     
   </body>
 </html>
