--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
           <img id="years-badge" src="assets/images/years-badge.png" alt="">
         </div>
         </div>
-
+        
+TODO - ADD OVERLAY TEXT AND STYLE FOR TABLET AND MOBILE
   <div class="container">
     <div class="large-div">
         <div class="hero-overlay">
