commented out the to do so it dont show on webpage

--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
           <img id="years-badge" src="assets/images/years-badge.png" alt="">
         </div>
         </div>
-        
-TODO - ADD OVERLAY TEXT AND STYLE FOR TABLET AND MOBILE
+
+<!-- TODO - ADD OVERLAY TEXT AND STYLE FOR TABLET AND MOBILE -->
+
   <div class="container">
     <div class="large-div">
         <div class="hero-overlay">
