added the second section to the home page - not styled for ipad or mobile as of yet

--- a/index.html
+++ b/index.html
@@ -153,30 +153,61 @@
         </div>
         </div>
 
-<!-- TODO - ADD OVERLAY TEXT AND STYLE FOR TABLET AND MOBILE -->
-
   <div class="container">
     <div class="large-div">
-        <div class="hero-overlay">
+        <div class="section-overlay">
           <h3 id="flush-sash-text" class="overlay-text">Flush Sash Collection</h3>
+          <a id="flush-sash-link" href="">
+            Explore Now
+          </a>
+        </div>
+        <div class="section-overlay" id="flush-sash-veka-logo">
+          <img src="assets/images/IN-Logo-white.webp" alt="">
         </div>
       <img id="big-image" src="assets/images/external-one.png" alt="">
     </div>
     <div class="side-divs">
       <div class="top-divs">
         <div class="small-div">
+          <div class="section-overlay">
+          <h3 class="small-div-text">Our Window Collection</h3>
+          <a class="small-div-link" href="">
+            Explore Now
+          </a>
+        </div>
           <img id="small-img-one" src="assets/images/veka-one.jpg" alt="">
         </div>
         <div class="small-div">
-          <img id="small-img-two" src="assets/images/hero-4.jpg" alt="">
+          <div class="section-overlay">
+          <h3 class="small-div-text">Our choice of Aluminium</h3>
+          <a class="small-div-link" href="">
+            Explore Now
+          </a>
+          <div class="section-overlay"">
+          <img id="which-logo" src="assets/images/which_logo.webp" alt="">
+        </div>
+        </div>
+          <img id="small-img-two" src="assets/images/veka-three.jpg" alt="">
         </div>
       </div>
       <div class="top-divs">
         <div class="small-div">
-          <img id="small-img-three" src="assets/images/veka-two.jpg" alt="">
+          <div class="section-overlay">
+          <h3 id="lantern-text" class="small-div-text">Exclusive Lanterns</h3>
+          <a id="lantern-link" class="small-div-link" href="">
+            Explore Now
+          </a>
+        </div>
+          <img id="small-img-three" src="assets/images/lantern.png" alt="">
         </div>
         <div class="small-div">
-          <img id="small-img-four" src="assets/images/veka-three.jpg" alt="">
+          <div class="section-overlay">
+          <h3 id="doors-text" class="small-div-text">Our range of Doors</h3>
+          <a id="doors-link" class="small-div-link" href="">
+            Explore Now
+          </a>
+        </div>
+          <img id="small-img-four" src="assets/images/door.jpg" alt="">
         </div>
       </div>
     </div>
