updated styles for ipad air portrait

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </a>
         </div>
         <div class="section-overlay" id="flush-sash-veka-logo">
-          <img src="assets/images/IN-Logo-white.webp" alt="">
+          <img id="veka-logo" src="assets/images/IN-Logo-white.webp" alt="">
         </div>
       <img id="big-image" src="assets/images/external-one.png" alt="">
     </div>
