converted the images to webp and removed the other file types from project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="logo-header">
         <img
           id="logo-header-img"
-          src="assets/images/IMG_19153.png"
+          src="assets/images/IMG_19153.webp"
           alt="bsw-logo"
         />
       </div>
@@ -148,7 +148,7 @@
           </a>
         </div>
         <div class="hero-overlay">
-          <img id="years-badge" src="assets/images/years-badge.png" alt="">
+          <img id="years-badge" src="assets/images/years-badge.webp" alt="">
         </div>
         </div>
 
@@ -163,7 +163,7 @@
         <div class="section-overlay" id="flush-sash-veka-logo">
           <img id="veka-logo" src="assets/images/IN-Logo-white.webp" alt="">
         </div>
-      <img id="big-image" src="assets/images/external-one.png" alt="">
+      <img id="big-image" src="assets/images/external-one.webp" alt="">
     </div>
     <div class="side-divs">
       <div class="top-divs">
@@ -174,7 +174,7 @@
             Explore Now
           </a>
         </div>
-          <img id="small-img-one" src="assets/images/veka-one.jpg" alt="">
+          <img id="small-img-one" src="assets/images/veka-one.webp" alt="">
         </div>
         <div class="small-div">
           <div class="section-overlay">
@@ -186,7 +186,7 @@
           <img id="which-logo" src="assets/images/which_logo.webp" alt="">
         </div>
         </div>
-          <img id="small-img-two" src="assets/images/veka-three.jpg" alt="">
+          <img id="small-img-two" src="assets/images/veka-three.webp" alt="">
         </div>
       </div>
       <div class="top-divs">
@@ -197,7 +197,7 @@
             Explore Now
           </a>
         </div>
-          <img id="small-img-three" src="assets/images/lantern.png" alt="">
+          <img id="small-img-three" src="assets/images/lantern.webp" alt="">
         </div>
         <div class="small-div">
           <div class="section-overlay">
@@ -206,7 +206,7 @@
             Explore Now
           </a>
         </div>
-          <img id="small-img-four" src="assets/images/door.jpg" alt="">
+          <img id="small-img-four" src="assets/images/door.webp" alt="">
         </div>
       </div>
     </div>
